tests/ui/nll/relate_tys/opaque-hrtb.stderr
error: implementation of `MyTrait` is not general enough
  --> $DIR/opaque-hrtb.rs:11:5
   |
LL |     bar()
   |     ^^^^^ implementation of `MyTrait` is not general enough
   |
   = note: `impl MyTrait<&'2 str>` must implement `MyTrait<&'1 str>`, for any lifetime `'1`...
   = note: ...but it actually implements `MyTrait<&'2 str>`, for some specific lifetime `'2`

error: aborting due to 1 previous error

